<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Weather</string>

    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="wind_speed">Wind Speed: %s m/s</string>
    <string name="pressure">Pressure: %s hpa</string>
    <string name="humidity">Humidity: %s <xliff:g>%%</xliff:g> </string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>

    <string name="celsius" translatable="false">&#xf03c;</string>
    <string name="fahrenheit" translatable="false">&#xf045;</string>
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>
    <string name="place_not_found">Sorry, no weather data found</string>

    <string name="last_update">Last update %s</string>

</resources>
